Prefer URI to URL for downloads
URL constructors are deprecated and the HTTP client is consuming URIs.